--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -7,10 +7,12 @@
 
 name: Java CI with Gradle
 
-on:[push]
-#branches: [ "main" ]
-#pull_request:
-# branches: [ "main" ]
+#on:[push]
+on:
+  push:
+    branches: [ "main" ]
+  pull_request:
+    branches: [ "main" ]
 
 permissions:
   contents: read
